Apply recipes of `org.openrewrite.staticanalysis`.